# beach-judge

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  fast  fast.sh  index.php  package.json
assets/: index.jade  judge.jade  layout.jade  login.jade  site.less  user.js
cmake/: DependencyManifest.cmake  Macros.cmake
cmake/Modules/: FetchLibWebSockets.cmake  FetchNodeJS.cmake  FetchPython2.cmake  FetchRethinkDB.cmake  FetchSQLite.cmake  FindLibWebSockets.cmake  FindOpenSSLbins.cmake  FindSQLite.cmake
docs/: notes
html/: index.html
include/BeachJudge/: Base.h  Competition.h  Config.h.in  HTTP.h  Mutex.h  Page.h  Problem.h  Question.h  Session.h  Socket.h  Submission.h  Team.h  Thread.h
include/Judge/: Base.h  Config.h.in  Judge.h  Persistence.h  Problem.h  SQL.h  Session.h  Types.h  User.h  WS_HTTP.h  WS_Judge.h
js/: test.js  user.js
js/admin/: manageTeams.js  problems.js  userManagement.js
js/common/: common.js
js/judge/: manageTeams.js
js/public/: login.js
scripts/: compile_c.sh  compile_cpp.sh  compile_java.sh
src/: Base.cpp  Competition.cpp  HTTP.cpp  Mutex.cpp  Page.cpp  Persistence.cpp  Problem.cpp  Question.cpp  SQL.cpp  Session.cpp  Socket.cpp  Submission.cpp  Team.cpp  Thread.cpp  User.cpp  WS_HTTP.cpp  WS_Judge.cpp  main.cpp
src/js/admin/: problem.js  userManagement.js
src/js/common/: common.js
src/js/public/: login.js
src/less/: admin.less  judge.less
src/less/common/: layout.less
src/node/: config.js  generate-css.js  generate-database.js  generate-html.js  generate-js.js  http.js  index.js  server-process.js  server.js  start.js  stop.js
src/pug/layouts/: admin.pug  default.pug
src/pug/static/: admin.pug  judge.pug  login.pug  user.pug
styles/: admin.less  judge.less  public.less  site.less  user.less
styles/common/: form.less  layout.less  theme.less
templates/: judge.jade  login.jade  team.jade
templates/layouts/: admin.jade  default.jade  judge.jade
templates/views/: admin.jade  judge.jade  login.jade  team.jade  user.jade
tools/: babel.js  build.bat  build.sh  buildsock.cpp  get-packages.bat  get-packages.sh  install-deps.sh  less.sh  redeploy.bat  redeploy.sh  restart.bat  restart.sh  rr.sh  run-server.bat  sock.sh  start-server-win.js  start.bat  start.sh  stop-server-win.js  stop.bat  stop.sh  tbr.sh  tsock.sh  unzip.bat
www/: 404.html  answer.html  grade.html  index.html  index.php  leaderboard.html  leaderboard_detailed.html  login.html  login.php  logout.html  mail.html  manageTests.html  navbar.inc  password.html  problems.html  responses.html  scoreboard.html  style.css  submission.html  submissions.html  teams.html  upload.html  uploadTest.html
www/css/: index.html  style.css
www/inc/: docfooter.html  dochead.html  dochead.php  loginmodal.html  loginstandalone.html  mailstub.html  modulegetproblems.html  modulemail.html  modulescoreboard.html  modulestatus.html  modulesubmit.html  navi.html  navi.php  teamforbid.html
www/include/BeachJudge/: Config.h
www/js/: beachjudge.js  status.js
